--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href='./style.css' />
-    <link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/1286/PNG/512/30_85244.png" />
+    <link rel="shortcut icon" href="https://i.pinimg.com/564x/67/48/9a/67489a87cfa8e7facc2e558477b03b33.jpg" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <title>Sheethus Restaurant of Goodies</title>
 </head>
@@ -34,7 +34,7 @@
     <!-- main logo !-->
 	<div class="IntroMsg">
     <img  alt=" where food meets passion" 
-    class="logo" src="https://cdn.icon-icons.com/icons2/1286/PNG/512/30_85244.png" id="introLogo" width="200" height="200" />
+    class="logo" src="https://i.pinimg.com/564x/67/48/9a/67489a87cfa8e7facc2e558477b03b33.jpg" id="introLogo" width="200" height="200" />
     </div>
         <!-- subject-->
 	<div class='IntroMsg'>
