--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             Let us sprinkle magic on your next celebration and turn it into a glittering extravaganza that your guests will cherish forever!
         </span>
         <h2>
-       <a href="call:111-111-111" style="text-decoration: none; color: white;"> <i class="bi bi-telephone-forward-fill"> <span> Contact US today </span></i></a>
+       <a href="call:111-111-111" style="text-decoration: none; color: white;"> <i class="bi bi-telephone-forward-fill"> <span> Contact us </span></i></a>
        
         </h2>
 	</div>
