--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
             <p class="review-text">The food was out of this world! I couldn't believe the flavors and presentation. Definitely coming back!</p>
             <p class="review-author">- AstronautFoodie123</p>
         </div>
+        <div class="review">
+            <p class="review-text">I had the Nebula Nectar and it was an explosion of taste in my mouth. The atmosphere is as fantastic as the food!</p>
+            <p class="review-author">- GalaxyGourmet</p>
+        </div>
 
         <!-- Review Submission Form -->
         <h3>Leave a Review</h3>
