--- a/index.html
+++ b/index.html
@@ -60,27 +60,27 @@
 	<ul>
 		<li>
 			<span class="dish">Nebula Nectar</span>
-			<span class="Price">$9</span>
+			<span class="Price">₹390</span>
 			<span class="Description">Stardust Vodka entwined with celestial juice, a sip of the cosmos.</span>
 		</li>
 		<li>
 			<span class="dish">Enchanted Elixir</span>
-			<span class="Price">$6</span>
+			<span class="Price">₹230</span>
 			<span class="Description">Rum distilled from mermaid's tears and soda from the ocean's depths.</span>
 		</li>
 		<li>
 			<span class="dish">Whimsy Whisky</span>
-			<span class="Price">$6</span>
+			<span class="Price">₹220</span>
 			<span class="Description">Time-traveling Whisky harmonized with fizzy pixie elixir.</span>
 		</li>
 		<li>
 			<span class="dish">Eclipse Red Wine</span>
-			<span class="Price">$6</span>
+			<span class="Price">₹360</span>
 			<span class="Description">8oz pour of the rarest vintage from a shadowy vineyard</span>
 		</li>
 		<li>
 			<span class="dish">Intergalactic Ale</span>
-			<span class="Price">$8</span>
+			<span class="Price">₹300</span>
 			<span class="Description">Brewed for wanderers, a hoppy odyssey through distant dimensions.</span>
 		</li>
 
@@ -101,33 +101,33 @@
 	<ul>
 		<li>
 			<span class="dish">Interstellar Nachos</span>
-			<span class="Price">$12</span>
+			<span class="Price">₹450</span>
 			<span class="Description">A cosmic collision of flavors featuring cheese, onions, and tomotoes. 
 			</span>
 		</li>
 		<li>
 			<span class="dish">Galactic Tacos</span>
-			<span class="Price">$12</span>
+			<span class="Price">₹500</span>
 			<span class="Description">Choose between chicken or beef, journeying through the stars with your side of choice.</span>
 		</li>
         <li>
             <span class="dish">Celestial Chicken Rice Bowl</span>
-            <span class="Price">$16</span>
+            <span class="Price">₹610</span>
             <span class="Description">Brown rice and celestial veggies, guided by your choice of sauce through the cosmos.</span>
         </li>
         <li>
             <span class="dish">Nebula Grilled Chicken</span>
-            <span class="Price">$15</span>
+            <span class="Price">₹390</span>
             <span class="Description">A tender meteoric delight, paired with a sauce of your choosing.</span>
         </li>
         <li>
             <span class="dish">Stellar Steak and Fired Beans</span>
-            <span class="Price">$15</span>
+            <span class="Price">₹500</span>
             <span class="Description">Savor the essence of a distant star as you indulge in steak with your selected side.</span>
         </li>
         <li>
             <span class="dish">Cosmic Burrito</span>
-            <span class="Price">$12</span>
+            <span class="Price">₹420</span>
             <span class="Description">Craft your own destiny with a choice between beef or chicken, wrapped in a tortilla constellation.</span>
         </li>
 		
@@ -145,22 +145,22 @@
 	<ul>
         <li>
             <span class="dish">Celestial Chocolate Odyssey</span>
-            <span class="Price">$7</span>
+            <span class="Price">₹750</span>
             <span class="Description">Delight in a loaded chocolate cake adorned with fudge topping, a journey through cocoa cosmos.</span>
         </li>
         <li>
             <span class="dish">New York Nebula Cheesecake</span>
-            <span class="Price">$12</span>
+            <span class="Price">₹120</span>
             <span class="Description">Indulge in the secrets of the universe with NY cheesecake topped with celestial strawberry essence.</span>
         </li>
         <li>
             <span class="dish">Starlit Apple Harmony</span>
-            <span class="Price">$6</span>
+            <span class="Price">₹600</span>
             <span class="Description">Warm apple pie kissed by cosmic ice cream, a fusion of flavors that ignites galaxies within.</span>
         </li>
         <li>
             <span class="dish">Cinnamon Constellation Churros</span>
-            <span class="Price">$7</span>
+            <span class="Price">₹700</span>
             <span class="Description">Pancake mix, water, oil, sugar, and stardust cinnamon come together in an otherworldly dance.</span>
         </li>
 
