--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Galactic Gastronomicon</title>
 </head>
 <body>
-
     <!-- this is the nav bar -->
      <div class="navBar" id="nv">
         <nav>
@@ -187,6 +186,7 @@
         </form>
     </div>
 </div>
+</body>
     
     
 
